# 3DPointCloudProject

./: README.md  create_cloud_from_txt.cpp  txt2pcd.cpp
Project001ImportPointCloudData/: CMakeLists.txt  off_to_ply.py
Project001ImportPointCloudData/example/: README.md
Project001ImportPointCloudData/example/qt_colorize_cloud/: pclviewer.cpp
Project001ImportPointCloudData/example/qt_visualizer/: pclviewer.cpp
Project001ImportPointCloudData/example/txt2pcd/: txt2pcd.cpp
example/qt_colorize_cloud/: pcl_visualizer.pro
example/qt_visualizer/: pcl_visualizer.pro
example/txt2pcd/: CMakeLists.txt
